Adding panache test
