# docs/openapi-definition/openapi.yaml
@@ -9,17 +9,6 @@ servers:
 - url: http://0.0.0.0:8082
   description: Auto generated value
 paths:
-  /api/hello:
-    get:
-      tags:
-      - Greeting Resource
-      responses:
-        "200":
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: string
   /api/v1/account:
     get:
       tags:
@@ -81,7 +70,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
+                $ref: '#/components/schemas/Account'
     delete:
       tags:
       - Account Resource
@@ -251,3 +240,31 @@ paths:
             application/json:
               schema:
                 type: object
+components:
+  schemas:
+    Account:
+      type: object
+      properties:
+        id:
+          format: int64
+          type: integer
+        accountName:
+          type: string
+        firstName:
+          type: string
+        middleName:
+          type: string
+        lastName:
+          type: string
+        birthday:
+          $ref: '#/components/schemas/LocalDate'
+        email:
+          type: string
+        phoneNumber:
+          type: string
+        password:
+          type: string
+    LocalDate:
+      format: date
+      type: string
+      example: 2022-03-10
